<resources>
    <string name="app_name">Supercell Games Community</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>
    <string name="hint_username">Nombre de Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="text_button_login">Login</string>
    <string name="dont_have_account">¿No tienes Cuenta?</string>
    <string name="create_here">Crea una aquí</string>
    <string name="hint_email">Correo</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_user">Usuario</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>
    <string name="text_button_createaccount">¡Únete!</string>
    <string name="toolbar_tittle_createaccount">Crear Cuenta</string>
    <string name="firstword_card">Hace</string>
    <string name="timecard_card">4 días</string>
    <string name="likenumbercard_card">4 Me Gusta</string>
    <string name="username_card">Elizabeth Arroyo</string>
    <string name="tab_search">Buscar</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_upload">Añadir</string>
    <string name="tab_notifications">Notificaciones</string>
    <string name="tab_profile">Perfil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="secondword_detail">Me Gusta</string>
    <string name="titleimage">\"DIOS ES PERFECTO\"</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eleifend, nisi et vestibulum suscipit, dolor nibh sagittis nisl, et imperdiet justo ante at sem. Mauris nec velit eget orci egestas scelerisque. Fusce eleifend ipsum eros, bibendum luctus diam scelerisque quis. Phasellus eu aliquet nisi, sed blandit odio. Ut suscipit velit eu mauris pulvinar accumsan. Pellentesque vitae arcu leo. Donec a ligula eu nulla rhoncus gravida. Donec convallis eget justo blandit consectetur. Pellentesque placerat blandit sodales. Nullam a molestie libero, at euismod libero. Aliquam erat volutpat. Nunc at mi nec quam efficitur sodales nec nec quam. Proin ac dolor non sem feugiat condimentum eu quis justo. Donec vel efficitur eros. Nam tincidunt, quam eu pretium blandit, tortor nibh venenatis lectus, id dictum libero nulla vitae dolor. Ut blandit ultrices mauris et porttitor.</string>
    <string name="transitionname_picture">transitionnamepicture</string>
</resources>
